--- a/Mainpage.html
+++ b/Mainpage.html
@@ -7,8 +7,12 @@
     </head>
     <body>
         <div class="btn1" onclick="SeriesOne()">Mätserie 1: </div>
+        <br>
+        <p id="test"></p>
+        <p id="test2"></p>
     </body>
     <foooter>
+        <script src="array.js"></script>
         <script src="Main.js"></script>
     </foooter>
 </html>
