Add support form importing MongoDB result object as a javascript object

--- a/Mainpage.html
+++ b/Mainpage.html
@@ -6,13 +6,16 @@
         <link rel="stylesheet" href="Main.css">
     </head>
     <body>
-        <div class="btn1" onclick="SeriesOne()">Mätserie 1: </div>
+        <div class="btn1" onclick="shufflestart()">Shuffle Primary Key Array: </div>
         <br>
+        <div class="btn1" id="seriesOneBtn" onclick="seriesOne()">Start Series One</div>
+        
         <p id="test"></p>
         <p id="test2"></p>
     </body>
     <foooter>
         <script src="array.js"></script>
         <script src="Main.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     </foooter>
 </html>
