Final version of Series one
Done some work with how we collect time

--- a/Mainpage.html
+++ b/Mainpage.html
@@ -24,8 +24,8 @@
     </div>
     <div class="content">
         <h2 style="margin-top:0px;">Cassandra Results</h2>
-        <p class="result" id="MongoDBResult">Cassandra Query Result: </p>
-        <p class="result" id="MongoDBFullResult">Cassandra Javascript Ready Result: </p>
+        <p class="result" id="CassandraResult">Cassandra Query Result: </p>
+        <p class="result" id="CassandraFullResult">Cassandra Javascript Ready Result: </p>
     </div>
 </body>
 <foooter>
