Series four done

--- a/Mainpage.html
+++ b/Mainpage.html
@@ -10,9 +10,9 @@
 <body>
     <div class="OptionMeny">
         <div class="btn1" id="seriesOneBtn" onclick="seriesOne()"><p>Start Series One</p></Start></div>
-        <div class="btn1" id="seriesTwoBtn" onclick="seriesOne()">Start Series Two</div>
+        <div class="btn1" id="seriesTwoBtn" onclick="seriesTwo()">Start Series Two</div>
         <div class="btn1" id="seriesThreeBtn" onclick="seriesOne()">Start Series Three</div>
-        <div class="btn1" id="seriesFourBtn" onclick="seriesOne()">Start Series Four</div>
+        <div class="btn1" id="seriesFourBtn" onclick="seriesFour()">Start Series Four</div>
 
         <p id="test"></p>
         <p id="test2"></p>
