Done some work on series 3
Close to done with series three, need to look over parallel function

--- a/SeriesThreeMainPage.html
+++ b/SeriesThreeMainPage.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="Main.css">
 </head>
 
-<body>
+<body onload="seriesThreeStart()">
     <div class="OptionMeny">
         <div class="btn1" id="seriesOneBtn" onclick="seriesOne()"><p>Start Series One</p></Start></div>
         <div class="btn1" id="seriesTwoBtn" onclick="seriesTwo()">Start Series Two</div>
-        <div class="btn1" id="seriesThreeBtn" onclick="seriesThreeStart()">Start Series Three</div>
+        <div class="btn1" id="seriesThreeBtn" onclick="seriesThree()">Start Series Three</div>
         <div class="btn1" id="seriesFourBtn" onclick="seriesFour()">Start Series Four</div>
 
         <p id="test"></p>
