Been testing with promeses in javascript for parallel execute. seems far better then forloop new tabs

--- a/SeriesThreeMainPage.html
+++ b/SeriesThreeMainPage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Main.css">
 </head>
 
-<body onload="seriesThreeStart()">
+<body onload="seriesThree()">
     <div class="OptionMeny">
         <div class="btn1" id="seriesOneBtn" onclick="seriesOne()"><p>Start Series One</p></Start></div>
         <div class="btn1" id="seriesTwoBtn" onclick="seriesTwo()">Start Series Two</div>
