All scripts are done

--- a/Mainpage.html
+++ b/Mainpage.html
@@ -10,7 +10,7 @@
 <body>
     <div class="OptionMeny">
         <div class="btn1" id="seriesOneBtn" onclick="seriesOne()"><p>Start Series One</p></Start></div>
-        <div class="btn1" id="seriesTwoBtn" onclick="seriesTwo()">Start Series Two</div>
+        <div class="btn1" id="seriesTwoBtn" onclick="seriesTwoStart()">Start Series Two</div>
         <div class="btn1" id="seriesThreeBtn" onclick="seriesThreeStart()">Start Series Three</div>
         <div class="btn1" id="seriesFourBtn" onclick="seriesFour()">Start Series Four</div>
 
